Causeview Package Complete/ant script/retrieveUnpackaged/objects/Organization_Relationship__c.object
<CustomObject>
    <description>Causeview - captures a relationship between two affiliated organizations.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Organizations</relationshipLabel>
        <relationshipName>Organization_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Organization_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reciprocal Organization Relationship</label>
        <referenceTo>Organization_Relationship__c</referenceTo>
        <relationshipName>Organization_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliated Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Organizations (Related Account)</relationshipLabel>
        <relationshipName>Organization_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Affiliated Organization</label>
    <nameField>
        <displayFormat>AO-{00000000}</displayFormat>
        <label>Affiliated Organization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliated Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>